# MIPT-FormalLanguages-Earley

./: CMakeLists.txt  README.md  formal_lang.cpp
include/: CMakeLists.txt  EarleyAlgorithm.cpp  EarleyAlgorithm.h
tests/: CMakeLists.txt  main.cpp  test.cpp  test.h
